src/styles/globals.css
@import url("https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap");

:root {
  --app-invalid: #d9534f;
  --app-btn-disabled: #b7a99a;
  --app-input-radius: 0.25rem;

  --bg-color: #ffffff;
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
  font-family: 'Inter';
}

.app-layout-container {
  display: flex;
  flex-direction: column;
  min-height: 100dvh;
  background-color: var(--bg-color);
}

.header {
  display: flex;
  justify-content: center;
  padding: 0.5rem 1rem;
  box-shadow: 0 0.125rem 0.25rem 0 rgba(0, 0, 0, 0.05);
  z-index: 10;
}

.header-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  width: 100%;
}

.brand-item {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 0.5rem;
  text-decoration: none;
}

.brand-item h1 {
  font-size: 1.25rem;
  line-height: 1.75rem;
  font-weight: 700;
  color: rgb(var(--bs-primary-rgb));
  margin-bottom: 0;
}

.brand-item p {
  color: var(--bs-gray-600);
  margin-bottom: 0;
}

.action-container {
  position: relative;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  gap: 10px;
  padding-block: 0.5rem;
}

.action-container-item {
  border: 1px solid rgb(var(--bs-accent-rgb));
  color: rgba(var(--bs-accent-rgb));
  border-radius: 100%;
  padding: 5px;
  width: 32px;
  height: 32px;
  display: flex;
  justify-content: center;
  align-items: center;
  text-decoration: none;
  position: relative;
  transition: all 0.3s ease;
}

.action-container-item.login span {
  display: none;
  margin-left: 8px;
  white-space: nowrap;
}

.action-container-item:hover {
  background: rgba(var(--bs-accent-rgb));
  color: black;
}

.action-container-item:active {
  transform: scale(0.9);
}

.action-container-item .badge {
  position: absolute;
  top: -0.5rem;
  right: -0.5rem;
}

.action-container svg {
  width: 1.25rem;
  height: 1.25rem;
}

a {
  color: inherit;
  text-decoration: none;
}

body {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

footer {
  color: white;
  display: flex;
  justify-content: center;
  padding: 20px;
}

.footer-container {
  max-width: 1200px;
  display: flex;
  flex-direction: column;
  gap: 40px;
  justify-content: space-between;
}

.social-media-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 20px;
}

.social-media-content ul {
  display: flex;
  flex-direction: row;
  list-style: none;
  align-items: center;
  gap: 8px;
}

.social-media-content ul li {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 40px;
  height: 40px;
  border-radius: 8px;
  background-color: #ffffff20;
  cursor: pointer;
}

.contact-content .contact-list {
  display: flex;
  flex-direction: row;
  width: auto;
  justify-content: space-between;
  align-items: first baseline;
  gap: 20px;
  padding: 0px;
}

.contact-content .contact-list .contact-item {
  background-color: transparent;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 8px;
  align-items: center;
}

.contact-content .contact-list .contact-item svg {
  width: 35px;
  height: 35px;
}

.contact-content .contact-list .contact-item span {
  text-wrap: wrap;
  text-align: center;
  font-size: 14px;
}

.social-media-content ul li:active {
  transform: scale(0.9);
}

.products-grid {
  display: grid;
  grid-template-columns: repeat(2, minmax(0, 1fr));
  gap: 20px;
  justify-items: center;
  width: 100%;
}

.products-list {
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-items: center;
  padding: 3rem 1.5rem;
  width: 100%;
  gap: 1rem;
}

.product-card {
  display: flex;
  flex-direction: column;
  border-radius: 15px;
  box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.1);
  max-width: 100%;
  width: 100%;
  border: 1px solid var(--bs-gray-800);
}

.product-card-modal {
  display: flex;
  flex-direction: row;
  border-radius: 15px;
  max-width: 100%;
  width: 100%;
}

.product-card .product-info {
  padding: 1rem;
}

.product-info {
  flex: 1;
  padding-right: 30px;
  display: flex;
  flex-direction: column;
}

.product-title {
  font-size: 1.5em;
  margin-bottom: 0.5rem;
  color: rgb(var(--bs-accent-rgb));
}

.product-description {
  font-size: 1em;
  margin-bottom: 0.5rem;
}

.line-clamp-2 {
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
}

.product-colors {
  display: flex;
  align-items: center;
  margin-bottom: 20px;
}

.color-option {
  width: 20px;
  height: 20px;
  border-radius: 50%;
  margin-right: 10px;
  cursor: pointer;
  border: 1px solid #ddd;
}

.color-option.blue {
  background-color: blue;
}

.color-option.green {
  background-color: green;
}

.color-option.red {
  background-color: red;
}

.product-price {
  color: rgb(var(--bs-primary-rgb));
  font-size: 1.5em;
  font-weight: 700;
  margin-bottom: 20px;
}

.buy-button {
  background-color: rgb(var(--bs-primary-rgb));
  color: white;
  border: none;
  padding: 0.75rem 1.5rem;
  font-size: 1em;
  border-radius: 5px;
  cursor: pointer;
  display: flex;
  align-items: center;
}

.buy-button:active {
  transform: scale(0.9);
}

.buy-button span {
  margin-left: 10px;
}

.product-image {
  flex: 1;
  position: relative;
  display: flex;
  align-items: center;
  max-width: 576px;
}

.product-image-container {
  position: relative;
  width: 100%;
  height: 300px;
  text-align: center;
}

.product-image img {
  border-radius: 8px;
  object-fit: contain;
}

.add-to-bag {
  position: absolute;
  top: 30px;
  right: 0;
  background-color: white;
  border: 1px solid #333;
  padding: 10px 20px;
  border-radius: 5px;
  cursor: pointer;
  font-size: 0.9em;
}

.product-thumbnails {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.product-thumbnails p {
  margin: 0;
  font-size: 0.9em;
  color: #777;
}
/* ... */

